# garbage

./: DEVlOG.md  README.md  garbage.cabal
app/: Main.hs
other/: FasterGame.cpp  FasterGame.cs  FasterGame.java  Makefile
other/rust/: Cargo.toml
other/rust/src/: main.rs
src/: NaiveGame0.hs  NaiveGame0Criterion.hs  NaiveGame1.hs  NaiveGame2.hs  NaiveGame3.hs  Repa.hs
