name:                garbage
version:             0.1.0.0
synopsis:            GC Benchmark
description:         Please see README.md
homepage:            https://github.com/boj/garbage#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Jones
maintainer:          brian.jones@uncannyworks.com
copyright:           2016 Brian Jones
category:            Benchmark
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NaiveGame0
                       NaiveGame1
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6 && < 0.6
                     , deepseq >= 1.4 && <= 1.5
                     , linear >= 1.20 && <= 1.21
                     , text >= 1.2 && <= 1.3
  default-language:    Haskell2010

executable garbage
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , garbage
  default-language:    Haskell2010

test-suite garbage-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , garbage
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/garbage
