name:                garbage
version:             0.1.0.0
synopsis:            GC Benchmark
description:         Please see README.md
homepage:            https://github.com/boj/garbage#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Jones
maintainer:          brian.jones@uncannyworks.com
copyright:           2016 Brian Jones
category:            Benchmark
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NaiveGame0
                       NaiveGame0Criterion
                       NaiveGame1
                       NaiveGame2
                       NaiveGame3
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6 && < 0.6
                     , deepseq >= 1.4 && <= 1.5
                     , linear >= 1.20 && <= 1.21
                     , text >= 1.2 && <= 1.3
                     , clock >= 0.7
                     , vector >= 0.11
                     , vector-th-unbox >= 0.2
                     , mtl >= 2.2
                     , criterion >= 1.1
  default-language:    Haskell2010

executable garbage
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts 
  build-depends:       base
                     , garbage
  default-language:    Haskell2010

executable garbage-repa
  hs-source-dirs:      src
  main-is:             Repa.hs
  ghc-options:         -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3
  -- -fllvm
  build-depends:       base                      
                     , containers >= 0.5.6 && < 0.6
                     , deepseq >= 1.4 && <= 1.5
                     , linear >= 1.20 && <= 1.21
                     , text >= 1.2 && <= 1.3
                     , clock >= 0.7
                     , vector >= 0.11
                     , vector-th-unbox >= 0.2
                     , mtl >= 2.2
                     , criterion >= 1.1
                     , repa >= 3.4.1.1
  default-language:    Haskell2010

  
test-suite garbage-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , garbage
  ghc-options:         -threaded -rtsopts 
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/garbage
